--- a/src/components/SignIn.css
+++ b/src/components/SignIn.css
@@ -1,13 +1,15 @@
-#formSignIn {
-  width: 70%;
-  height: auto;
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  margin: 0;
+#backgroundSignIn {
+  background-image: url(/images/background-img-sign-in.jpg);
+  background-position: center;
+  background-size: cover;
 }
 
-#outlined-basic {
-  border-radius: 50px;
-  color: white;
+#formSignIn {
+  margin-top: 70%;
+  width: 70%;
+  height: auto;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
 }
