--- a/src/components/SignIn.css
+++ b/src/components/SignIn.css
@@ -13,3 +13,14 @@
   display: flex;
   flex-direction: column;
 }
+
+#forgotPassword {
+  text-decoration: none;
+  color: var(--main-color-blue);
+  font-size: 0.8em;
+}
+
+p {
+  font-size: 0.8em;
+  margin-top: 50px;
+}
