--- a/src/components/IconList.css
+++ b/src/components/IconList.css
@@ -10,9 +10,10 @@
 
 #iconlist {
   width: 100%;
-  height: 60px;
+  height: 50px;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
   background-color: white;
+  margin-top: 10px;
 }
