--- a/src/components/CourtDetails.css
+++ b/src/components/CourtDetails.css
@@ -50,13 +50,18 @@
 }
 
 .CourtCardBig > * {
-  margin-left: 20px;
+  margin-left: 30px;
   margin-right: 40px;
 }
 
 .CourtDescription {
   line-height: 2.5vh;
   margin-top: 0;
+  margin-bottom: 20px;
+}
+
+#courtName {
+  margin-bottom: 0;
 }
 
 #RateIt {
@@ -66,8 +71,13 @@
   color: black;
 }
 
-#RateIt p {
-  margin: 0;
+#RateIt p,
+.Rating p {
+  margin: 0px;
+}
+
+.CourtCardBig p {
+  margin-top: 20px;
 }
 
 .CourtButtons {
@@ -78,4 +88,23 @@
 .Arrow {
   color: white;
   margin-left: 10px;
+}
+
+#buttonList {
+  display: flex;
+  justify-content: space-between;
+}
+
+.buttonGreen {
+  border-radius: 30px;
+  height: 30px;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-size: 0.8em;
+  color: grey;
+}
+
+.buttonGreen:hover {
+  color: green;
+  background-color: rgb(212, 243, 212);
 }
