--- a/src/components/Account.css
+++ b/src/components/Account.css
@@ -1,3 +1,5 @@
+/* More styles in Signup.css */
+
 #Pic_round {
   position: relative;
 }
@@ -20,4 +22,9 @@ h3 {
 
 h3 {
   margin-bottom: 30px;
+}
+
+h4 {
+  margin-top: 0;
+  margin-bottom: 0;
 }
