--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -14,3 +14,9 @@
   position: absolute;
   bottom: 0;
 }
+
+.searchCity {
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-around;
+}
