--- a/src/components/AddCourt.css
+++ b/src/components/AddCourt.css
@@ -1,6 +1,14 @@
 .buttonList_newCourt {
   width: 70%;
-  margin-left: 30px;
-  margin-top: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
   outline: none;
+}
+
+#sizeField {
+  width: 50%;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
 }
