--- a/src/components/AddCourt.css
+++ b/src/components/AddCourt.css
@@ -1,10 +1,9 @@
 .buttonList_newCourt {
-  width: 70%;
+  width: 90%;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 10px;
+  margin-top: 15px;
   outline: none;
-  margin-bottom: 0px;
 }
 
 #sizeField {
@@ -16,4 +15,8 @@
 
 #lessMargin {
   margin-top: -40px;
+}
+.buttonList_newCourt button {
+  width: 120px;
+  margin-left: 20px;
 }
