--- a/src/components/Account.css
+++ b/src/components/Account.css
@@ -20,7 +20,7 @@ h3 {
 }
 
 h3 {
-  margin-bottom: 30px;
+  margin-bottom: 6%;
 }
 
 h4 {
@@ -29,5 +29,9 @@ h4 {
 }
 
 #formSignUp {
-  margin-bottom: 50px;
+  margin-bottom: 3%;
+}
+
+#formSignUp h2 {
+  margin-top: 10%;
 }
