--- a/src/components/CourtDetails.css
+++ b/src/components/CourtDetails.css
@@ -1,6 +1,6 @@
 .CourtPic {
   width: 100%;
-  height: 40%;
+  height: 45%;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
 }
@@ -111,4 +111,9 @@
 
 .buttonGreen:hover {
   background-color: #70bb8c;
+}
+
+#buttonList button {
+  width: 120px;
+  margin-left: 20px;
 }
