--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -27,7 +27,7 @@
 #Homebuttons {
   display: flex;
   height: 250px;
-  margin-top: 100px;
+  margin-top: 20%;
   justify-content: space-around;
   flex-direction: column;
   position: absolute;
