--- a/src/components/SignUp.css
+++ b/src/components/SignUp.css
@@ -1,13 +1,13 @@
 .greenWithPic {
   width: 100%;
-  height: 33%;
+  height: 30%;
   background-color: #01a85b;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
 }
 
 #text {
-  padding-top: 10%;
+  padding-top: 7%;
   margin-left: auto;
   margin-right: auto;
   width: 90%;
@@ -35,7 +35,7 @@
   border: solid white 3px;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 50px;
+  margin-top: 5%;
   position: relative;
 }
 #halfcircle {
@@ -52,7 +52,7 @@
 #formSignUp {
   margin-left: auto;
   margin-right: auto;
-  margin-top: 60px;
+  margin-top: 8%;
   width: 90%;
   display: flex;
   flex-direction: column;
